--- a/now.json
+++ b/now.json
@@ -1,15 +1,15 @@
 {
-  "version": 2,
-  "scope": "ian@iansenne.com",
-  "build": {
-    "env": {
-      "FIREBASE_API_KEY": "@firebase_api_key",
-      "FIREBASE_APP_ID": "@firebase_app_id",
-      "FIREBASE_AUTH_DOMAIN": "@firebase_auth_domain",
-      "FIREBASE_DATABASE_URL": "@firebase_database_url",
-      "FIREBASE_MESSAGING_SENDER_ID": "@firebase_messaging_sender_id",
-      "FIREBASE_PROJECT_ID": "@firebase_project_id",
-      "FIREBASE_STORAGE_BUCKET": "@firebase_storage_bucket"
+    "version": 2,
+    "scope": "ian@iansenne.com",
+    "build": {
+        "env": {
+            "FIREBASE_API_KEY": "@wjs-firebase_api_key",
+            "FIREBASE_APP_ID": "@wjs-firebase_app_id",
+            "FIREBASE_AUTH_DOMAIN": "@wjs-firebase_auth_domain",
+            "FIREBASE_DATABASE_URL": "@wjs-firebase_database_url",
+            "FIREBASE_MESSAGING_SENDER_ID": "@wjs-firebase_messaging_sender_id",
+            "FIREBASE_PROJECT_ID": "@wjs-firebase_project_id",
+            "FIREBASE_STORAGE_BUCKET": "@wjs-firebase_storage_bucket"
+        }
     }
-  }
 }
