--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start": "now dev"
     },
     "dependencies": {
-        "@babel/core": "^7.8.4",
+        "@babel/core": "^7.9.6",
         "@babel/helper-call-delegate": "^7.8.7",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -18,8 +18,10 @@
         "@babel/runtime": "^7.8.4",
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
+        "@zeit/next-workers": "^1.0.1-canary.1",
         "babel-eslint": "^10.0.3",
         "dotenv": "^8.2.0",
+        "escodegen": "^1.14.1",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-loader": "^3.0.3",
@@ -29,17 +31,24 @@
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.18.3",
         "eslint-plugin-react-hooks": "^2.4.0",
+        "esprima": "^4.0.1",
+        "estemplate": "^0.5.1",
+        "estraverse": "^5.1.0",
         "firebase": "^7.13.2",
         "micro-cors": "^0.1.1",
         "next": "^9.4.1",
         "node-sass": "^4.13.1",
         "now": "^19.0.1",
+        "prismjs": "^1.20.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-icons": "^3.10.0",
         "react-redux": "^7.2.0",
         "react-redux-firebase": "^3.3.0",
-        "redux": "^4.0.5"
+        "react-simple-code-editor": "^0.11.0",
+        "redux": "^4.0.5",
+        "worker-loader": "^2.0.0"
     },
     "license": "MIT"
 }
