--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
         "start": "now dev"
     },
     "dependencies": {
-        "@babel/core": "^7.9.6",
         "@babel/helper-call-delegate": "^7.8.7",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -16,6 +15,7 @@
         "@babel/plugin-proposal-optional-chaining": "^7.8.3",
         "@babel/plugin-proposal-private-methods": "^7.8.3",
         "@babel/runtime": "^7.8.4",
+        "@babel/standalone": "^7.9.6",
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
         "@zeit/next-workers": "^1.0.1-canary.1",
