--- a/now.json
+++ b/now.json
@@ -3,13 +3,13 @@
     "scope": "ian@iansenne.com",
     "build": {
         "env": {
-            "FIREBASE_API_KEY": "@wjs-firebase_api_key",
-            "FIREBASE_APP_ID": "@wjs-firebase_app_id",
-            "FIREBASE_AUTH_DOMAIN": "@wjs-firebase_auth_domain",
-            "FIREBASE_DATABASE_URL": "@wjs-firebase_database_url",
-            "FIREBASE_MESSAGING_SENDER_ID": "@wjs-firebase_messaging_sender_id",
-            "FIREBASE_PROJECT_ID": "@wjs-firebase_project_id",
-            "FIREBASE_STORAGE_BUCKET": "@wjs-firebase_storage_bucket"
+            "FIREBASE_API_KEY": "@wjs-api_key",
+            "FIREBASE_APP_ID": "@wjs-app_id",
+            "FIREBASE_AUTH_DOMAIN": "@wjs-auth_domain",
+            "FIREBASE_DATABASE_URL": "@wjs-database_url",
+            "FIREBASE_MESSAGING_SENDER_ID": "@wjs-messaging_sender_id",
+            "FIREBASE_PROJECT_ID": "@wjs-project_id",
+            "FIREBASE_STORAGE_BUCKET": "@wjs-storage_bucket"
         }
     }
 }
