add firebase support & magical stuff

--- a/.env.template
+++ b/.env.template
@@ -12,3 +12,4 @@ FIREBASE_PROJECT_ID='blep'
 FIREBASE_STORAGE_BUCKET='blep.appspot.com'
 FIREBASE_MESSAGING_SENDER_ID='1234567890'
 FIREBASE_APP_ID='1:1234567890:web:1234567890abcdefghijklmnopqrstuvwxyz'
+FIREBASE_MEASUREMENT_ID='G-XXXXXXX'
