--- a/now.json
+++ b/now.json
@@ -1,15 +1,15 @@
 {
     "version": 2,
-    "scope": "ian@iansenne.com",
+    "scope": "iansenne",
     "build": {
         "env": {
-            "FIREBASE_API_KEY": "@wjs-api_key",
-            "FIREBASE_APP_ID": "@wjs-app_id",
-            "FIREBASE_AUTH_DOMAIN": "@wjs-auth_domain",
-            "FIREBASE_DATABASE_URL": "@wjs-database_u_r_l",
-            "FIREBASE_MESSAGING_SENDER_ID": "@wjs-messaging_sender_id",
-            "FIREBASE_PROJECT_ID": "@wjs-project_id",
-            "FIREBASE_STORAGE_BUCKET": "@wjs-storage_bucket"
+            "FIREBASE_API_KEY": "@wjs_api_key",
+            "FIREBASE_APP_ID": "@wjs_app_id",
+            "FIREBASE_AUTH_DOMAIN": "@wjs_auth_domain",
+            "FIREBASE_DATABASE_URL": "@wjs_database_url",
+            "FIREBASE_MESSAGING_SENDER_ID": "@wjs_messaging_sender_id",
+            "FIREBASE_PROJECT_ID": "@wjs_project_id",
+            "FIREBASE_STORAGE_BUCKET": "@wjs_storage_bucket"
         }
     }
 }
