--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-icons": "^3.10.0",
+        "react-quill": "^1.3.5",
         "react-redux": "^7.2.0",
         "react-redux-firebase": "^3.3.0",
         "react-simple-code-editor": "^0.11.0",
