--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "react-redux-firebase": "^3.3.0",
         "react-simple-code-editor": "^0.11.0",
         "redux": "^4.0.5",
+        "serialize-javascript": "^3.0.0",
         "worker-loader": "^2.0.0"
     },
     "license": "MIT"
