--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "estraverse": "^5.1.0",
         "firebase": "^7.13.2",
         "micro-cors": "^0.1.1",
-        "next": "^9.4.1",
+        "monaco-editor-webpack-plugin": "^1.9.0",
+        "next": "^9.4.4",
+        "next-transpile-modules": "^3.3.0",
         "node-sass": "^4.13.1",
         "now": "^19.0.1",
         "prismjs": "^1.20.0",
@@ -44,6 +46,7 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-icons": "^3.10.0",
+        "react-monaco-editor": "^0.36.0",
         "react-quill": "^1.3.5",
         "react-redux": "^7.2.0",
         "react-redux-firebase": "^3.3.0",
